objects/ssot__ResearchStudyCandidate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CandidateId__c</fullName>
        <label>Candidate</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramSiteId__c</fullName>
        <label>CareProgramSite</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DropoutProbabilityScoreNumber__c</fullName>
        <label>Dropout Probability Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Research Study Candidate Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyId__c</fullName>
        <label>Research Study</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceType__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723730956_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyCandidate_CareProgramSi_rel</label>
        <referenceTo>ssot__CareProgramSite__dlm</referenceTo>
        <relationshipLabel>ResearchStudyCandidate_CareProgramSi_rel</relationshipLabel>
        <relationshipName>rel_1716723730956_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723733555_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyCandidate_CandidateId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ResearchStudyCandidate_CandidateId_m_rel</relationshipLabel>
        <relationshipName>rel_1716723733555_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723736005_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyCandidate_ResearchStudy_rel</label>
        <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
        <relationshipLabel>ResearchStudyCandidate_ResearchStudy_rel</relationshipLabel>
        <relationshipName>rel_1716723736005_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>